scripts/log.txt
  File "retrain.py", line 814
    print input_node
                   ^
SyntaxError: invalid syntax
